# test_task

./: Dockerfile  db.sqlite3  pyproject.toml  start.sh
catalog/: models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
test_task/: settings.py  urls.py
