[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["vektrius <vecko.d@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"